# SoapyRemote

./: .travis.yml  CMakeLists.txt  Changelog.txt  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt  ClientStreamData.cpp  ClientStreamData.hpp  DiscoverServers.cpp  DiscoveryClient.cpp  DiscoveryClient.hpp  LogAcceptor.cpp  LogAcceptor.hpp  Registration.cpp  Settings.cpp  SoapyClient.cpp  SoapyClient.hpp  Streaming.cpp
common/: CMakeLists.txt  FindAvahi.cmake  FormatToElemSize.hpp  LookupURL.cpp  SoapyDNSSD.hpp  SoapyDNSSDAvahi.cpp  SoapyDNSSDNone.cpp  SoapyHTTPUtils.cpp  SoapyHTTPUtils.hpp  SoapyIfAddrs.cpp  SoapyIfAddrs.hpp  SoapyIfAddrsUnix.cpp  SoapyIfAddrsWindows.cpp  SoapyInfoUtils.hpp  SoapyInfoUtils.in.cpp  SoapyMDNSEndpoint.hpp  SoapyMDNSEndpointApple.cpp  SoapyMDNSEndpointAvahi.cpp  SoapyMDNSEndpointNone.cpp  SoapyNetworkDefs.in.hpp  SoapyRPCPacker.cpp  SoapyRPCPacker.hpp  SoapyRPCSocket.cpp  SoapyRPCSocket.hpp  SoapyRPCSocketTCP.cpp  SoapyRPCSocketUDT.cpp  SoapyRPCUnpacker.cpp  SoapyRPCUnpacker.hpp  SoapyRecvEndpoint.cpp  SoapyRecvEndpoint.hpp  SoapyRemoteCommon.hpp  SoapyRemoteConfig.hpp  SoapyRemoteDefs.hpp  SoapySSDPEndpoint.cpp  SoapySSDPEndpoint.hpp  SoapySSDPUtils.cpp  SoapySSDPUtils.hpp  SoapySSDPUtils.in.cpp  SoapySendEndpoint.cpp  SoapySendEndpoint.hpp  (+7 more)
debian/: changelog  control  copyright  rules  soapysdr-server.install  soapysdr-server.manpages  soapysdr-server.postinst  soapysdr-server.postrm  soapysdr-server.prerm
server/: AvahiPublish.cpp  AvahiPublish.hpp  CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  DNSSDPublish.hpp  DNSSDPublishAvahi.cpp  DNSSDPublishNone.cpp  DiscoveryServer.cpp  DiscoveryServer.hpp  LogForwarding.cpp  LogForwarding.hpp  ServerListener.cpp  ServerStreamData.cpp  ServerStreamData.hpp  SoapySDRServer.1  SoapyServer.cpp  SoapyServer.hpp  ThreadPrioHelper.hpp  ThreadPrioUnix.cpp  ThreadPrioWindows.cpp
system/: CMakeLists.txt  SoapySDRServer.service.in  SoapySDRServer.sysctl
systemd/: CMakeLists.txt
